# etl_sales_azure_airflow

./: .gitignore  Dockerfile  README.MD  docker-compose.yaml  etl.py  exe_pipeline.py  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: etl_sales.py
db/: init_db.py
db/migrations/: 01_create_database.sql  03_create_dim_tables.sql  04_create_fact_table.sql
etl/: extract.py  load.py  transform.py
plugins/etl/: extract.py  pipeline.py  transform.py
plugins/utils/: logger.py
utils/: logger.py
